# Treddit

./: README.md  checklist.org  docker-compose.yaml
backend/server/: .gitignore  Cargo.toml
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.test.yaml
server/.sqlx/: query-044967b76d6f67cd04a0e52807727c6b4721349a4751e2ed8a4f8d96e2f69b1d.json  query-04f622de6b21cec1901810390ad5c0c8ce7231061f5f411eba9e20019ff3882e.json  query-079332766b130519613cd31c62703c8f202ecba41563ead6f6ed96653ae10ba1.json  query-0830b97d02672c5a41bc7509ed76b724747b0c0b68fa562217011b3c04dc923c.json  query-09bb135f30701c420516e2c97a63e57daa227a87f4a54698d2ec25dd80627599.json  query-0e957e3969974af4e0eb9c6ff083260ec7ef4f3426eaa053407276ef2489728c.json  query-0ed670d29b1a51911ee73a5a875a4c4545dce504c6890aae4636b41a5093c645.json  query-1213d971deb2a23ac26b24421ee43b7f28314dab2dbab3d50565288a071ab5a3.json  query-262d527ebf2159a0d8221e8e49f0bf30427176ce5de7eb1ffe80807e0d2857d7.json  query-288c15da28823bdc223718226a47722f46c320ce52e8ee316b406cf872b00460.json  query-32f2517223758430a346be7f164849cad1a84d15cb89fbd30137e4091cbbc390.json  query-3acf1f35efe091f6d3106d7adeca552e2de9548d35c01af993f31afd0c8f6328.json  query-406f7562e58c9dec7f45f168f848c6e96093d646a34aa220bd5a7c568be4c690.json  query-430683fd5ed9e3cea2fcaab70e868cbc735afd9ed40a9534af055d654e05bb0e.json  query-4754059c56d4b0d5437c6ea6085d9d0e4215595b2859c26dec33c45c08bba1fe.json  query-4b99f1af17658df6be96e3840201366e3b36cd37bba56121f818889ac45a554d.json  query-527333d1bd5be46e7adc9ed21741056afbe44113c33896ae447f3ee07fe19031.json  query-68f2c013e2eddb8d5b254fb1febca04fb366926773d3dee1053dbabbbc0c5b39.json  query-6d69b570a307d11e4432c0c86bb49b68004d535c7b69d225d2d44a1a7bd9c2c7.json  query-70fb96dd5ccb8c03e0d35ce386536b8177976aa58130eacc2bda587258df3bfb.json  query-783249128e5251a689a9018467552ac5c09b9d81d20b6e9104e2c06105d17d99.json  (+23 more)
server/src/: main.rs  (+4 more)
(+200 files in other folders)
