[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version="0.7.5",features=["multipart"]}
lettre = "0.11.7"
rand = "0.8.5"
serde = {version="1.0.203",features=["derive"]}
sqlx = {version="0.7.4",features=["postgres","runtime-tokio","chrono"]}
tokio = {version="1.37.0",features=["rt-multi-thread","macros"]}
tracing-subscriber = "0.3.18"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
tower-http = { version = "0.5.2", features = ["fs","cors"] }
chrono = {version="0.4.38",features=["serde"]}
dotenvy = "0.15.7"
regex = "1.10.5"

[profile.dev.package.sqlx-macros]
opt-level = 3
