[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
serde = {version="1.0.201",features=["derive"]}
sqlx = {version="0.7.4",features=["postgres","runtime-tokio-rustls"]}
tokio = {version="1.37.0",features=["full"]}
tracing-subscriber = "0.3.18"
