[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
lettre = "0.11.7"
rand = "0.8.5"
serde = {version="1.0.201",features=["derive"]}
sqlx = {version="0.7.4",features=["postgres","runtime-tokio-rustls"]}
tokio = {version="1.37.0",features=["full"]}
tracing-subscriber = "0.3.18"
